@@ -1,11 +1,16 @@
-#! /usr/bin/env python
-"""Simple test script for cryptmodule.c
-   Roger E. Masse
-"""
-
-from test.test_support import verbose
+from test import test_support
+import unittest
 import crypt
 
-c = crypt.crypt('mypassword', 'ab')
-if verbose:
-    print 'Test encryption: ', c
+class CryptTestCase(unittest.TestCase):
+
+    def test_crypt(self):
+        c = crypt.crypt('mypassword', 'ab')
+        if test_support.verbose:
+            print 'Test encryption: ', c
+
+def test_main():
+    test_support.run_unittest(CryptTestCase)
+
+if __name__ == "__main__":
+    test_main()
